--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -16,12 +16,22 @@
         android:paddingRight="@dimen/pad_15dp"
         android:paddingTop="@dimen/pad_20dp" >
 
-        <ImageView
-            android:id="@+id/imageView1"
-            android:layout_width="wrap_content"
+
+        <TextView
+            style="@style/btn_white_large"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/pad_20dp"
-            android:src="@drawable/logo_login" />
+            android:text="ULAB Students Join Us"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="@dimen/pad_30dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="40dp"
+            android:layout_marginBottom="@dimen/pad_30dp"
+
+            />
+
 
         <EditText
             android:id="@+id/email"
